adding js calculator code

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       
       </div>
     </div>
-    <div class="display">
-      <input type="text" placeholder="399,981">
+    <div class="container-display">
+      <p class="display" id="display">0</p>
     </div>
     <div class="keyboard">
       <button class="btn" id="seven">7</button>
