refactoring html, js, and css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-
-  </style>
 </head>
 
 <body>
@@ -24,8 +19,6 @@
     <div class="header">
       <h1 class="title">calc</h1>
       <p class="theme">THEME</p>
-      <!-- slider switch code -->
-      <!-- add in localstorage check for prefers-color-scheme -->
       <div class="theme-numbers">
         <span>1</span>
         <span>2</span>
@@ -48,30 +41,30 @@
       <p class="display" id="display">0</p>
     </div>
     <div class="keyboard">
-      <button class="btn" id="seven">7</button>
-      <button class="btn" id="eight">8</button>
-      <button class="btn" id="nine">9</button>
-      <button class="btn btn-function-key" id="delete">DEL</button>
-      <button class="btn" id="four">4</button>
-      <button class="btn" id="five">5</button>
-      <button class="btn" id="six">6</button>
-      <button class="btn" id="add">+</button>
-      <button class="btn" id="one">1</button>
-      <button class="btn" id="two">2</button>
-      <button class="btn" id="three">3</button>
-      <button class="btn" id="subtract">-</button>
-      <button class="btn" id="decimal">.</button>
-      <button class="btn" id="zero">0</button>
-      <button class="btn" id="divide">/</button>
-      <button class="btn" id="multiply">x</button>
-      <button class="btn btn-function-key btn-reset-key" id="reset">RESET</button>
-      <button class="btn btn-equal-key" id="equal">=</button>
+      <button class="btn" >7</button>
+      <button class="btn" >8</button>
+      <button class="btn" >9</button>
+      <button class="btn btn-function-key" >DEL</button>
+      <button class="btn" >4</button>
+      <button class="btn" >5</button>
+      <button class="btn" >6</button>
+      <button class="btn" >+</button>
+      <button class="btn" >1</button>
+      <button class="btn" >2</button>
+      <button class="btn" >3</button>
+      <button class="btn" >-</button>
+      <button class="btn" >.</button>
+      <button class="btn" >0</button>
+      <button class="btn" >/</button>
+      <button class="btn" >x</button>
+      <button class="btn btn-function-key btn-reset-key" >RESET</button>
+      <button class="btn btn-equal-key" >=</button>
     </div> <!-- end keyboard -->
   </div> <!-- end container -->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="mailto:davidrhyne@att.net">David Rhyne</a>.
   </div>
   <!-- Script -->
   <script src="./src/calculator.js"></script>
