--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div> <!-- end container -->
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
     Coded by <a href="mailto:davidrhyne@att.net">David Rhyne</a>.
   </div>
   <!-- Script -->
