--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   </div> <!-- end container -->
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
-    Coded by <a href="mailto:davidrhyne@att.net">David Rhyne</a>.
+    <div>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.</div>
+    <div>Coded by <a href="mailto:davidrhyne@att.net">David Rhyne</a>.</div>
   </div>
   <!-- Script -->
   <script src="./src/calculator.js"></script>
